--- a/website.html
+++ b/website.html
@@ -15,7 +15,7 @@
    
 	 <div class="wrapper">
         <div class="logo">
-         <img src="file:///Users/cyberkid/Documents/Pic/IMG_6284.PNG">
+         <img src="IMG_6284.PNG">
       
          </div>
         <div class="semi">
@@ -29,7 +29,7 @@
 <div class="teamprofile">
 <div class="card">
 <div class="members">
-	<img src="file:///Users/cyberkid/Documents/Pic/paul.jpg">
+	<img src="paul.jpg">
 </div>	
 <div class="content">
     <div class="contented">
@@ -51,7 +51,7 @@
 			</div>
     <div class="card">
 <div class="members">
-    <img src="file:///Users/cyberkid/Documents/Pic/jhercy.jpg">
+    <img src="jhercy.jpg">
 </div>  
 <div class="content">
     <div class="contented">
@@ -73,7 +73,7 @@
             </div>
 <div class="card">
 <div class="members">
-    <img src="file:///Users/cyberkid/Documents/Pic/gab.jpg">
+    <img src="gab.jpg">
 </div>  
 <div class="content">
     <div class="contented">
@@ -95,7 +95,7 @@
             </div>
     <div class="card">
 <div class="members">
-    <img src="file:///Users/cyberkid/Documents/Pic/lorenz.jpg">
+    <img src="lorenz.jpg">
 </div>  
 <div class="content">
     <div class="contented">
@@ -117,7 +117,7 @@
             </div>
             <div class="card">
 <div class="members">
-    <img src="file:///Users/cyberkid/Documents/Pic/adi.jpg">
+    <img src="adi.jpg">
 </div>  
 <div class="content">
     <div class="contented">
