--- a/website.html
+++ b/website.html
@@ -65,7 +65,7 @@
                             <a href="https://github.com/JhercyCombras"><i class="fa-brands fa-github"></i></a>
                         </li>
                         <li style="--i: 3">
-                            <a href="www.linkedin.com/in/jhercy-combras-a4a694322"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.linkedin.com/in/jhercy-combras-a4a694322"><i class="fa-brands fa-linkedin-in"></i></a>
                         </li>
                     </ul>
                 </div>  
